feat: rename Squishification to ActivationFunction and update related classes